--- a/Tarefa1/index.html
+++ b/Tarefa1/index.html
@@ -27,13 +27,19 @@
                 <option value="Java">Java</option> 
             </select>
         </p>
+        <p>
+            Nota Final:
+            <input type="number" id = "nota">
+        </p>
         <input type="submit" value="Cadastrar" id="cadastrar">
 
         <table id="tabela">
-            <tr>
+            <tr id="cabecalho">
                 <th>Nome</th>
                 <th>Idade</th>
                 <th>Curso</th>
+                <th>Nota Final</th>
+                
             </tr>
         </table>
         
