--- a/Tarefa3/index.html
+++ b/Tarefa3/index.html
@@ -22,22 +22,22 @@
             <div >
                 <ul class="navbar-nav nav-underline d-flex flex-sm-row gap-4">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active text-dark ">Home</a>
+                        <a href="index.html" style= 'font-family: "Boldonse", system-ui;' class="nav-link active text-dark ">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="cadastro-filmes.html" class="nav-link text-dark ">Cadastrar Filmes</a>
+                        <a href="cadastro-filmes.html" style= 'font-family: "Boldonse", system-ui;' class="nav-link text-dark ">Cadastrar Filmes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="cadastro-salas.html" class="nav-link text-dark">Cadastrar Salas</a>
+                        <a href="cadastro-salas.html" style= 'font-family: "Boldonse", system-ui;' class="nav-link text-dark">Cadastrar Salas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Cadastrar Sessões</a>
+                        <a href="#" style= 'font-family: "Boldonse", system-ui;' class="nav-link text-dark">Cadastrar Sessões</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Venda de Ingresso</a>
+                        <a href="#" style= 'font-family: "Boldonse", system-ui;' class="nav-link text-dark">Venda de Ingresso</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Listagem de Sessões</a>
+                        <a href="#" style= 'font-family: "Boldonse", system-ui;' class="nav-link text-dark">Listagem de Sessões</a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="/Tarefa3/assets/aindaEstouAqui.png" class="d-block w-100 rounded opacity-75" alt="Ainda Estou Aqui" width="1280" height="480">
-                    <div class="carousel-caption d-none d-md-flex align-items-center gap-4">
+                    <div class="carousel-caption d-none d-lg-flex align-items-center gap-4">
                         <h1 style= 'font-family: "Boldonse", system-ui;' class ="text-white"> AINDA ESTOU AQUI</h1>
                         <p>
                             <a href="#" style='font-family: "Boldonse", system-ui;' class="text-white text-decoration-none">Comprar ingresso</a>
@@ -96,42 +96,51 @@
     <br>
     <br>
 
-    <div class="container d-flex flex-sm-row gap-4">
-        <div class="card" style="width: 320px;">
-            <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Filme</h5>
-              <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
-              <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
-            </div>
-        </div>
-        <div class="card" style="width: 320px;">
-            <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Filme</h5>
-              <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
-              <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
-            </div>
-        </div>
-        <div class="card" style="width: 320px;">
-            <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Filme</h5>
-              <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
-              <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
-            </div>
-        </div>
-            <div class="card" style="width: 320px;">
-                <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title">Filme</h5>
-                <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
-                <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
+    <div class="container">
+        <div class="row gap-4 justify-content-center">
+            <div class="col-md-6 col-lg-4 d-flex">
+                <div class="card w-100">
+                    <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Filme</h5>
+                        <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                        <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
+                    </div>
                 </div>
             </div>
-        
+            <div class="col-md-6 col-lg-4 d-flex">
+                <div class="card w-100">
+                    <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Filme</h5>
+                        <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                        <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex">
+                <div class="card w-100">
+                    <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Filme</h5>
+                        <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                        <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex">
+                <div class="card w-100">
+                    <img src="/Tarefa3/assets/aindaEstouAqui.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Filme</h5>
+                        <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                        <a href="#" class="btn btn-secondary">Comprar Ingresso</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
+    
 
 
 
