--- a/Tarefa3/cadastro-filmes.html
+++ b/Tarefa3/cadastro-filmes.html
@@ -41,11 +41,11 @@
                             class="nav-link text-dark">Cadastrar Sessões</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" style='font-family: "Boldonse", system-ui;' class="nav-link text-dark">Venda de
+                        <a href="venda-ingressos.html" style='font-family: "Boldonse", system-ui;' class="nav-link text-dark">Venda de
                             Ingresso</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" style='font-family: "Boldonse", system-ui;' class="nav-link text-dark">Listagem de
+                        <a href="sessoes.html" style='font-family: "Boldonse", system-ui;' class="nav-link text-dark">Listagem de
                             Sessões</a>
                     </li>
                 </ul>
@@ -186,7 +186,8 @@
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="text-white h4" for="classificacao-filme-editar">Classificação Indicativa</label>
+                            <label class="text-white h4" for="classificacao-filme-editar">Classificação
+                                Indicativa</label>
                             <select class="form-control" id="classificacao-filme-editar">
                                 <option>Livre</option>
                                 <option>10 anos</option>
